--- a/api/pom.xml
+++ b/api/pom.xml
@@ -32,6 +32,7 @@
     <properties>
         <skip.enforcer>false</skip.enforcer>
         <test.level>INFO</test.level>
+        <version.plugin.jacoco>0.8.12</version.plugin.jacoco>
     </properties>
 
     <parent>
@@ -126,6 +127,31 @@
             </resource>
         </resources>
         <plugins>
+            <plugin>
+                <groupId>org.jacoco</groupId>
+                <artifactId>jacoco-maven-plugin</artifactId>
+                <version>${version.plugin.jacoco}</version>
+                <executions>
+                    <execution>
+                        <id>prepare-agent</id>
+                        <goals>
+                            <goal>prepare-agent</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>report</id>
+                        <phase>test</phase>
+                        <goals>
+                            <goal>report</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <excludes>
+                        <exclude>**com.gargoylesoftware*</exclude>
+                    </excludes>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.jboss.bridger</groupId>
                 <artifactId>bridger</artifactId>
